Updated multiple files in backend module